--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <button type="submit" aria-label="Send">
                 <i class="material-icons">send</i>
             </button>
+            <button type="submit" aria-label="Send">
+                <i class="material-icons">send</i>
+            </button>
+
 
         </form>
 
